--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TARGET=taiwan.osm.pbf
-GEOFABRIK_DOWNLOAD_URL=https://download.geofabrik.de/asia/taiwan-latest.osm.pbf
-POLY_FILE=resources/taiwan.poly
+TARGET=costa-rica.osm.pbf
+GEOFABRIK_DOWNLOAD_URL=https://download.geofabrik.de/central-america/costa-rica-latest.osm.pbf
+POLY_FILE=resources/costa-rica.poly
 TILEMAKER_CONFIG=resources/config-openmaptiles.json
 TILEMAKER_PROCESS=resources/process-openmaptiles.lua
